jdbc4olap/jjtree/org/jdbc4olap/parsing/SqlGrammar.java
/* Generated By:JJTree&JavaCC: Do not edit this line. SqlGrammar.java */
package org.jdbc4olap.parsing;

import java.io.*;
import java.util.*;

public class SqlGrammar/*@bgen(jjtree)*/implements SqlGrammarTreeConstants, SqlGrammarConstants {/*@bgen(jjtree)*/
  protected JJTSqlGrammarState jjtree = new JJTSqlGrammarState();

  final public SimpleNode QueryStatement() throws ParseException {
 /*@bgen(jjtree) Query */
  ASTQuery jjtn000 = new ASTQuery(JJTQUERY);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(K_SELECT);
      SelectList();
      FromClause();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case K_WHERE:
        jj_consume_token(K_WHERE);
        WhereClause();
        break;
      default:
        jj_la1[0] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case K_GROUP:
        GroupByClause();
        break;
      default:
        jj_la1[1] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 90:
        jj_consume_token(90);
        break;
      default:
        jj_la1[2] = jj_gen;
        ;
      }
   jjtree.closeNodeScope(jjtn000, true);
   jjtc000 = false;
   {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
   if (jjtc000) {
     jjtree.clearNodeScope(jjtn000);
     jjtc000 = false;
   } else {
     jjtree.popNode();
   }
   if (jjte000 instanceof RuntimeException) {
     {if (true) throw (RuntimeException)jjte000;}
   }
   if (jjte000 instanceof ParseException) {
     {if (true) throw (ParseException)jjte000;}
   }
   {if (true) throw (Error)jjte000;}
    } finally {
   if (jjtc000) {
     jjtree.closeNodeScope(jjtn000, true);
   }
    }
    throw new Error("Missing return statement in function");
  }

// SelectList ::= * | SelectItem (, SelectItem)*
  final public void SelectList() throws ParseException {
 /*@bgen(jjtree) SelectList */
  ASTSelectList jjtn000 = new ASTSelectList(JJTSELECTLIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 91:
        t = jj_consume_token(91);
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
          jjtn000.setText(t.image);
        break;
      case S_IDENTIFIER:
      case S_QUOTED_IDENTIFIER:
        SelectItem();

        label_1:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 92:
            ;
            break;
          default:
            jj_la1[3] = jj_gen;
            break label_1;
          }
          jj_consume_token(92);
          SelectItem();
                     ASTSelectList jjtn001 = new ASTSelectList(JJTSELECTLIST);
                     boolean jjtc001 = true;
                     jjtree.openNodeScope(jjtn001);
          try {
                     jjtree.closeNodeScope(jjtn001,  2);
                     jjtc001 = false;

          } finally {
                     if (jjtc001) {
                       jjtree.closeNodeScope(jjtn001,  2);
                     }
          }
        }
   jjtree.closeNodeScope(jjtn000, true);
   jjtc000 = false;

        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
   if (jjtc000) {
     jjtree.clearNodeScope(jjtn000);
     jjtc000 = false;
   } else {
     jjtree.popNode();
   }
   if (jjte000 instanceof RuntimeException) {
     {if (true) throw (RuntimeException)jjte000;}
   }
   if (jjte000 instanceof ParseException) {
     {if (true) throw (ParseException)jjte000;}
   }
   {if (true) throw (Error)jjte000;}
    } finally {
   if (jjtc000) {
     jjtree.closeNodeScope(jjtn000, true);
   }
    }
  }

// SelectItem() ::= SelectStar | ColumnName() [SelectAlias]
  final public void SelectItem() throws ParseException {
 /*@bgen(jjtree) SelectItem */
  ASTSelectItem jjtn000 = new ASTSelectItem(JJTSELECTITEM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_1(2147483647)) {
        SelectStar();
                                          jjtree.closeNodeScope(jjtn000, true);
                                          jjtc000 = false;

      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case S_IDENTIFIER:
        case S_QUOTED_IDENTIFIER:
          ColumnName();

          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case K_AS:
          case S_IDENTIFIER:
            SelectAlias();
                     ASTSelectAliasItem jjtn001 = new ASTSelectAliasItem(JJTSELECTALIASITEM);
                     boolean jjtc001 = true;
                     jjtree.openNodeScope(jjtn001);
            try {
                     jjtree.closeNodeScope(jjtn001,  2);
                     jjtc001 = false;

            } finally {
                     if (jjtc001) {
                       jjtree.closeNodeScope(jjtn001,  2);
                     }
            }
            break;
          default:
            jj_la1[5] = jj_gen;
            ;
          }
     jjtree.closeNodeScope(jjtn000, true);
     jjtc000 = false;

          break;
        default:
          jj_la1[6] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

// SelectStar() ::= OracleObjectName()".*"
  final public void SelectStar() throws ParseException {
 /*@bgen(jjtree) SelectStar */
  ASTSelectStar jjtn000 = new ASTSelectStar(JJTSELECTSTAR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      OracleObjectName();
      jj_consume_token(93);
                          jjtree.closeNodeScope(jjtn000, true);
                          jjtc000 = false;

    } catch (Throwable jjte000) {
   if (jjtc000) {
     jjtree.clearNodeScope(jjtn000);
     jjtc000 = false;
   } else {
     jjtree.popNode();
   }
   if (jjte000 instanceof RuntimeException) {
     {if (true) throw (RuntimeException)jjte000;}
   }
   if (jjte000 instanceof ParseException) {
     {if (true) throw (ParseException)jjte000;}
   }
   {if (true) throw (Error)jjte000;}
    } finally {
   if (jjtc000) {
     jjtree.closeNodeScope(jjtn000, true);
   }
    }
  }

  final public void ColumnName() throws ParseException {
 /*@bgen(jjtree) ColumnName */
  ASTColumnName jjtn000 = new ASTColumnName(JJTCOLUMNNAME);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_2(2147483647)) {
        TableReference();

        jj_consume_token(94);
        OracleObjectName();
                            ASTCompleteTableColumnName jjtn001 = new ASTCompleteTableColumnName(JJTCOMPLETETABLECOLUMNNAME);
                            boolean jjtc001 = true;
                            jjtree.openNodeScope(jjtn001);
        try {
                            jjtree.closeNodeScope(jjtn001,  2);
                            jjtc001 = false;

        } finally {
                            if (jjtc001) {
                              jjtree.closeNodeScope(jjtn001,  2);
                            }
        }
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case S_IDENTIFIER:
        case S_QUOTED_IDENTIFIER:
          OracleObjectName();

          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 94:
            jj_consume_token(94);
            OracleObjectName();
                              ASTTableColumnName jjtn002 = new ASTTableColumnName(JJTTABLECOLUMNNAME);
                              boolean jjtc002 = true;
                              jjtree.openNodeScope(jjtn002);
            try {
                              jjtree.closeNodeScope(jjtn002,  2);
                              jjtc002 = false;

            } finally {
                              if (jjtc002) {
                                jjtree.closeNodeScope(jjtn002,  2);
                              }
            }
            break;
          default:
            jj_la1[7] = jj_gen;
            ;
          }
          break;
        default:
          jj_la1[8] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

// SelectAlias ::= (<S_IDENTIFIER>)+
  final public void SelectAlias() throws ParseException {
 /*@bgen(jjtree) SelectAlias */
  ASTSelectAlias jjtn000 = new ASTSelectAlias(JJTSELECTALIAS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case K_AS:
        jj_consume_token(K_AS);
        break;
      default:
        jj_la1[9] = jj_gen;
        ;
      }
      t = jj_consume_token(S_IDENTIFIER);
                             jjtn000.setText(t.image);
   jjtree.closeNodeScope(jjtn000, true);
   jjtc000 = false;

    } finally {
   if (jjtc000) {
     jjtree.closeNodeScope(jjtn000, true);
   }
    }
  }

  final public void CatalogName() throws ParseException {
 /*@bgen(jjtree) CatalogName */
  ASTCatalogName jjtn000 = new ASTCatalogName(JJTCATALOGNAME);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      OracleObjectName();
                        jjtree.closeNodeScope(jjtn000, true);
                        jjtc000 = false;

    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

  final public void SchemaName() throws ParseException {
 /*@bgen(jjtree) SchemaName */
  ASTSchemaName jjtn000 = new ASTSchemaName(JJTSCHEMANAME);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      OracleObjectName();
                        jjtree.closeNodeScope(jjtn000, true);
                        jjtc000 = false;

    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

  final public void TableName() throws ParseException {
 /*@bgen(jjtree) TableName */
  ASTTableName jjtn000 = new ASTTableName(JJTTABLENAME);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      OracleObjectName();
                        jjtree.closeNodeScope(jjtn000, true);
                        jjtc000 = false;

    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

  final public void OracleObjectName() throws ParseException {
 /*@bgen(jjtree) OracleObjectName */
  ASTOracleObjectName jjtn000 = new ASTOracleObjectName(JJTORACLEOBJECTNAME);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case S_IDENTIFIER:
        t = jj_consume_token(S_IDENTIFIER);
                      jjtree.closeNodeScope(jjtn000, true);
                      jjtc000 = false;
                      jjtn000.setText(t.image);
        break;
      case S_QUOTED_IDENTIFIER:
        t = jj_consume_token(S_QUOTED_IDENTIFIER);
                             jjtree.closeNodeScope(jjtn000, true);
                             jjtc000 = false;
                             jjtn000.setText(t.image);
        break;
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

// FromClause ::= FromItem (, FromItem)*
  final public void FromClause() throws ParseException {
 /*@bgen(jjtree) FromClause */
  ASTFromClause jjtn000 = new ASTFromClause(JJTFROMCLAUSE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(K_FROM);
      FromItem();

      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 92:
          ;
          break;
        default:
          jj_la1[11] = jj_gen;
          break label_2;
        }
        jj_consume_token(92);
        FromItem();
                      ASTFromClause jjtn001 = new ASTFromClause(JJTFROMCLAUSE);
                      boolean jjtc001 = true;
                      jjtree.openNodeScope(jjtn001);
        try {
                      jjtree.closeNodeScope(jjtn001,  2);
                      jjtc001 = false;

        } finally {
                      if (jjtc001) {
                        jjtree.closeNodeScope(jjtn001,  2);
                      }
        }
      }
     jjtree.closeNodeScope(jjtn000, true);
     jjtc000 = false;

    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

  final public void TableReference() throws ParseException {
 /*@bgen(jjtree) TableReference */
  ASTTableReference jjtn000 = new ASTTableReference(JJTTABLEREFERENCE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      CatalogName();

      jj_consume_token(94);
      SchemaName();

      jj_consume_token(94);
      TableName();
                   jjtree.closeNodeScope(jjtn000, true);
                   jjtc000 = false;

    } catch (Throwable jjte000) {
   if (jjtc000) {
     jjtree.clearNodeScope(jjtn000);
     jjtc000 = false;
   } else {
     jjtree.popNode();
   }
   if (jjte000 instanceof RuntimeException) {
     {if (true) throw (RuntimeException)jjte000;}
   }
   if (jjte000 instanceof ParseException) {
     {if (true) throw (ParseException)jjte000;}
   }
   {if (true) throw (Error)jjte000;}
    } finally {
   if (jjtc000) {
     jjtree.closeNodeScope(jjtn000, true);
   }
    }
  }

// FromItem ::= TableReference [alias]
  final public void FromItem() throws ParseException {
 /*@bgen(jjtree) FromItem */
  ASTFromItem jjtn000 = new ASTFromItem(JJTFROMITEM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      TableReference();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case S_IDENTIFIER:
     ASTFromAliasItem jjtn001 = new ASTFromAliasItem(JJTFROMALIASITEM);
     boolean jjtc001 = true;
     jjtree.openNodeScope(jjtn001);
        try {
          TableAlias();
        } catch (Throwable jjte001) {
     if (jjtc001) {
       jjtree.clearNodeScope(jjtn001);
       jjtc001 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte001 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte001;}
     }
     if (jjte001 instanceof ParseException) {
       {if (true) throw (ParseException)jjte001;}
     }
     {if (true) throw (Error)jjte001;}
        } finally {
     if (jjtc001) {
       jjtree.closeNodeScope(jjtn001,  2);
     }
        }
        break;
      default:
        jj_la1[12] = jj_gen;
        ;
      }
   jjtree.closeNodeScope(jjtn000, true);
   jjtc000 = false;

    } catch (Throwable jjte000) {
   if (jjtc000) {
     jjtree.clearNodeScope(jjtn000);
     jjtc000 = false;
   } else {
     jjtree.popNode();
   }
   if (jjte000 instanceof RuntimeException) {
     {if (true) throw (RuntimeException)jjte000;}
   }
   if (jjte000 instanceof ParseException) {
     {if (true) throw (ParseException)jjte000;}
   }
   {if (true) throw (Error)jjte000;}
    } finally {
   if (jjtc000) {
     jjtree.closeNodeScope(jjtn000, true);
   }
    }
  }

// TableAlias ::= (<S_IDENTIFIER>)+
  final public void TableAlias() throws ParseException {
 /*@bgen(jjtree) TableAlias */
  ASTTableAlias jjtn000 = new ASTTableAlias(JJTTABLEALIAS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(S_IDENTIFIER);
                    jjtn000.setText(t.image);
   jjtree.closeNodeScope(jjtn000, true);
   jjtc000 = false;

    } finally {
   if (jjtc000) {
     jjtree.closeNodeScope(jjtn000, true);
   }
    }
  }

  final public void WhereClause() throws ParseException {
 /*@bgen(jjtree) WhereClause */
  ASTWhereClause jjtn000 = new ASTWhereClause(JJTWHERECLAUSE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      SQLRelationalExpression();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case K_AND:
        jj_consume_token(K_AND);
          ASTWhereClause jjtn001 = new ASTWhereClause(JJTWHERECLAUSE);
          boolean jjtc001 = true;
          jjtree.openNodeScope(jjtn001);
        try {
          WhereClause();
        } catch (Throwable jjte001) {
          if (jjtc001) {
            jjtree.clearNodeScope(jjtn001);
            jjtc001 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte001 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte001;}
          }
          if (jjte001 instanceof ParseException) {
            {if (true) throw (ParseException)jjte001;}
          }
          {if (true) throw (Error)jjte001;}
        } finally {
          if (jjtc001) {
            jjtree.closeNodeScope(jjtn001,  2);
          }
        }
        break;
      default:
        jj_la1[13] = jj_gen;
        ;
      }
  jjtree.closeNodeScope(jjtn000, true);
  jjtc000 = false;

    } catch (Throwable jjte000) {
  if (jjtc000) {
    jjtree.clearNodeScope(jjtn000);
    jjtc000 = false;
  } else {
    jjtree.popNode();
  }
  if (jjte000 instanceof RuntimeException) {
    {if (true) throw (RuntimeException)jjte000;}
  }
  if (jjte000 instanceof ParseException) {
    {if (true) throw (ParseException)jjte000;}
  }
  {if (true) throw (Error)jjte000;}
    } finally {
  if (jjtc000) {
    jjtree.closeNodeScope(jjtn000, true);
  }
    }
  }

  final public void SQLRelationalExpression() throws ParseException {
 /*@bgen(jjtree) SQLRelationalExpression */
  ASTSQLRelationalExpression jjtn000 = new ASTSQLRelationalExpression(JJTSQLRELATIONALEXPRESSION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      SQLSimpleExpression();

      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 96:
      case 97:
      case 98:
      case 99:
      case 100:
      case 101:
      case 102:
     ASTSQLRelOpExpr jjtn001 = new ASTSQLRelOpExpr(JJTSQLRELOPEXPR);
     boolean jjtc001 = true;
     jjtree.openNodeScope(jjtn001);
        try {
          SQLRelationalOperatorExpression();
        } catch (Throwable jjte001) {
     if (jjtc001) {
       jjtree.clearNodeScope(jjtn001);
       jjtc001 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte001 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte001;}
     }
     if (jjte001 instanceof ParseException) {
       {if (true) throw (ParseException)jjte001;}
     }
     {if (true) throw (Error)jjte001;}
        } finally {
     if (jjtc001) {
       jjtree.closeNodeScope(jjtn001,  2);
     }
        }
        break;
      default:
        jj_la1[14] = jj_gen;
        if (jj_2_3(2)) {
                     ASTSQLInExpr jjtn002 = new ASTSQLInExpr(JJTSQLINEXPR);
                     boolean jjtc002 = true;
                     jjtree.openNodeScope(jjtn002);
          try {
            SQLInClause();
          } catch (Throwable jjte002) {
                     if (jjtc002) {
                       jjtree.clearNodeScope(jjtn002);
                       jjtc002 = false;
                     } else {
                       jjtree.popNode();
                     }
                     if (jjte002 instanceof RuntimeException) {
                       {if (true) throw (RuntimeException)jjte002;}
                     }
                     if (jjte002 instanceof ParseException) {
                       {if (true) throw (ParseException)jjte002;}
                     }
                     {if (true) throw (Error)jjte002;}
          } finally {
                     if (jjtc002) {
                       jjtree.closeNodeScope(jjtn002,  2);
                     }
          }
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
   jjtree.closeNodeScope(jjtn000, true);
   jjtc000 = false;

    } catch (Throwable jjte000) {
   if (jjtc000) {
     jjtree.clearNodeScope(jjtn000);
     jjtc000 = false;
   } else {
     jjtree.popNode();
   }
   if (jjte000 instanceof RuntimeException) {
     {if (true) throw (RuntimeException)jjte000;}
   }
   if (jjte000 instanceof ParseException) {
     {if (true) throw (ParseException)jjte000;}
   }
   {if (true) throw (Error)jjte000;}
    } finally {
   if (jjtc000) {
     jjtree.closeNodeScope(jjtn000, true);
   }
    }
  }
